For #4787: fix alignment in iOS

--- a/form-runner/jvm/src/main/assets/xbl/orbeon/time/time.less
+++ b/form-runner/jvm/src/main/assets/xbl/orbeon/time/time.less
@@ -25,5 +25,9 @@
     input[type = "time"] {
         padding-top: 1px;
         padding-bottom: 1px;
+        // Fix alignment in iOS
+        &::-webkit-date-and-time-value {
+            padding-top: 4px;
+        }
     }
 }
